# CtrlExcelReader

./: .gitignore  CMakeLists.txt  CMakePresets.json  ExcelRoundTripTest.ctl  ExcelXlsxHelpers.cxx  ExcelXlsxHelpers.hxx  ExternHdl.cxx  ExternHdl.hxx  LICENSE  README.md  THIRD-PARTY-LICENSES.txt  VersInfo.rc  vcpkg-configuration.json  vcpkg.json
custom-ports/xlsxio/: fix-dependencies.patch  portfile.cmake  vcpkg.json
